--- a/include/speex/Makefile.am
+++ b/include/speex/Makefile.am
@@ -5,5 +5,5 @@ nodist_pkginclude_HEADERS = speex_config_types.h
 
 pkginclude_HEADERS = speex.h speex_bits.h speex_callbacks.h \
 	speex_header.h \
-	speex_stereo.h speex_types.h
+	speex_stereo.h speex_types.h speex_codec.h
 
