--- a/include/speex/Makefile.in
+++ b/include/speex/Makefile.in
@@ -316,9 +316,13 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 nodist_pkginclude_HEADERS = speex_config_types.h
-pkginclude_HEADERS = speex.h speex_bits.h speex_callbacks.h \
+pkginclude_HEADERS = speex.h \
+  speex_bits.h \
+  speex_callbacks.h \
 	speex_header.h \
-	speex_stereo.h speex_types.h speex_codec.h
+	speex_stereo.h \
+	speex_types.h \
+	speex_codec.h
 
 all: all-am
 
